src/static/pycontw-2020/styles/page.scss
@import 'site';

body {
	// Fix the fancy h1 overflowing width (because 100vw includes scrollbar).
	overflow-x: hidden;
	background-color: $top-navbar-background-color;
}

.page-hero {
	background-color: $top-navbar-background-color;
	display: flex;
	flex-direction: row;
	height: $menu-desktop-height - 20;
	@include on-desktop;
}

.menu-navbar-desktop {
	@include menu-navbar-desktop(url('../assets/2019bluelogo.svg'), $jinger-bread, $jinger-bread, $jinger-bread);

	.menu {
        height: $menu-desktop-height - 20;
		margin: 0 auto;
	}

	@include on-desktop {
		margin: 0 40px;
		display: flex;
		flex-direction: row;
		width: 100%;
		justify-content: space-between;
		align-items: center;
	}
}

// Shove to left edge, ignoring container.
@mixin shove-left() {
	margin-left: calc(50% - 50vw);
}

main {
	@include content-section;
	@include container;

	@include on-desktop {
		padding-left: 0;
		padding-right: 0;
	}

	position: relative;

	// Fancy h1 that merges into the navbar.
	> h1:first-child {
		@mixin fill-vw($p) {
			width: calc(100vw - #{$p * 2});
			padding: 0 $p 32px $p;
		}

		// @include shove-left();
		// @include fill-vw(2rem);

        // 2020
		// background-color: $white;

		@include on-desktop {
			// @include fill-vw(6rem);
		}
	}

	@mixin container-block($margin-top, $margin-bottom) {
		margin-top: $margin-top;
		margin-bottom: $margin-bottom;

		// Cancel terminal margins for nested blocks.
		> *:first-child {
			margin-top: 0;
		}
		> *:last-child {
			margin-bottom: 0;
		}
	}

	// Most content blocks are 48px apart.
	> * {
		@include container-block(48px, 20px);
	}

	// p elements are 20px apart.
	p + p {
		margin-top: 20px;
	}
    h3 {
		text-align: left;

		&::before{
			// content: url('../assets/snake-icon-dark.svg');
            content: '';
            display: inline-block;
            width: 30px;
            height: 30px;
            background-image: url('../assets/snake-icon-dark.svg');
            background-repeat: no-repeat;
            background-size: 110% 110%;
            background-position: 50% 50%;
			margin-right: 5px;
            position: relative;
            top: 8px;

            @include on-desktop {
                background-size: 125% 125%;
            }
		}
	}
	// Custom UL bullets.
	ul {
		$mark-indent: 1.125rem;
		$text-indent: 2.125rem;

		list-style: none;
		padding-left: $text-indent;
		text-indent: $mark-indent - $text-indent;

		> li {
			&::before {
				content: '•';
				display: block;
				float: left;
				width: $text-indent - $mark-indent;
			}

			> p {
				margin-top: 0;
			}
		}
	}

	> table:not([class]), table.table, .table > table {
		min-width: 100%;
		text-align: center;
		border-collapse: collapse;

		tr {
			> th, > td {
				height: 3.5rem;
				padding: 4px 8px;
				border-bottom: solid thin $indigo;
				font-size: 1rem;
				font-weight: 400;
			}
			> th {
				color: $indigo;
			}
		}
	}
	.table {
		width: 100%;
		overflow: auto;
	}
	.closing-para {
		text-align: right;
	}
}



[class*=" deco-"],
[class^="deco-"] {
	position: absolute;
	z-index: -1;
    opacity: 0.4;
}

.deco-b-1 {
	top: 16%;
	right: -2%;
}

.deco-b-2 {
	bottom: 14%;
	left: -8%;
}

.deco-c-1 {
	top: 15.2%;
	right: -15%;
    transform: rotate(42deg);
    width: 145px;
    opacity: 0.15;
}

.deco-c-2 {
	bottom: 18%;
	left: -31%;
    transform: rotate(42deg);
    width: 250px;
    opacity: 0.05;
}

.deco-c-3 {
	bottom: 12.2%;
	left: -32%;
    transform: rotate(42deg);
    width: 190px;
    opacity: 0.1;
}

@include on-desktop {
	// margin: 0 $hero-desktop-margin 0px;
	.deco-b-1 {
		top: 16%;
		right: -20%;
	}

	.deco-b-2 {
		bottom: 14%;
		left: -20%;
	}

    .deco-c-1 {
        top: 15.1%;
        right: -20%;
    }
}

@mixin big-button-icon($name) {
	.icon-#{$name} {
		mask: url('../assets/icon-#{$name}.svg');
		mask-size: 100% 100%;
	}
}

.pill-title {
    color: $jinger-bread;
    background-color: transparentize($imperial, 0.9);
    border-radius: 65px;
    height: 113px;
    line-height: 113px;
    margin-top: 20px;
    border: 10px solid transparent;

    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;

    h1 {
        margin: 0;
    }

    &.alt {
		position: relative;
        background-color: transparent;
        border-color: transparentize($imperial, 0.9);

		.icon {
			width: 35px;
			height: 35px;
			background-repeat: no-repeat;
			position: absolute;
			left: 13px;
			background-color: $jinger-bread;

			top: 50%;
			transform: translate(0, -50%);
            display: none;

			@include on-desktop {
				left: 33px;
				width: 50px;
				height: 50px;
                display: block;
			}
		}

		@include big-button-icon(speaking);
		@include big-button-icon(venue);
		@include big-button-icon(registration);
		@include big-button-icon(sponsor);
		@include big-button-icon(volunteering);
		@include big-button-icon(about);
    }
}

.multi {
    height: 100%;
    display: flex;
    align-content: center;
    justify-content: center;
    flex-direction: column;

    > div {
        line-height: 1.2;
        .icon {
            position: absolute;
            left: 0;
        }
    }
}





// Page-specific styling.
@import 'pages/about';
@import 'pages/keynotes';
@import 'pages/talks';
@import 'pages/ticket-info';
@import 'pages/tutorials';
@import 'pages/venue';
@import 'pages/schedule';
@import 'pages/staff';
@import 'pages/portal';
@import 'pages/sponsorship-prospectus';

